compiler/actonc/test/syntaxerrors/err38.act
# Hex literal error
def bad_hex():
    return 0xGHI